Removed 'String Template Preview'. And added some examples for Optional and Collection filtering.