@@ -36,8 +36,12 @@
                     <encoding>UTF-8</encoding>
                     <source>21</source>
                     <target>21</target>
+                    <!--
                     <enablePreview>true</enablePreview>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    -->
+                    <!--
+                    <compilerArgs>enable-preview</compilerArgs>
+                    -->
                 </configuration>
             </plugin>
             <plugin>
